bk_ida/gccida/c1/read_name_map
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/cppfiles.c:1371:40: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
 struct file_name_map * read_name_map( cpp_reader_0 *pfile, const char *dirname) 
                                       ^~~~~~~~~~~~
                                       cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/cppfiles.c:1373:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *v2; // r14 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/cppfiles.c:1394:1: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
cpp_reader_0 *pfilea; // [rsp+18h] [rbp-38h] 
^~~~~~~~~~~~
cpp_reader
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/cppfiles.c:1436:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v10] & 0xC00) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/cppfiles.c:1441:24: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( v12 != -1 && ( sch_istable[( unsigned __int8)v12] & 1) != 0 ); 
                       ^~~~~~~~~~~
                       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/read_name_map/src/obj/cppfiles.o] Error 1
